# Stock_Market_Predictor

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  stock_market_data-AAL.csv
documentation/: Final_Presentation.pptx  Specifications Overview.docx  parallel_app_user_guide.docx
parallel_app/: CMakeLists.txt  README.txt  files.cmake
parallel_app/common/inc/: common_config.h  parallel_client.h  parallel_server.h  stdafx.h  thread_safe_queue.h  transport_factory.h  transport_interface.h
parallel_app/common/src/: main.cpp  parallel_client.cpp  parallel_server.cpp  thread_safe_queue.cpp
parallel_app/config_files/: parallel_client.json  parallel_client_1.json  parallel_client_2.json  parallel_client_3.json  parallel_client_4.json  parallel_server.json  parallel_server_1.json  parallel_server_2.json
parallel_app/platform/windows/inc/: windows_platform_functions.h  windows_udp_transport.h
parallel_app/platform/windows/src/: windows_platform_functions.cpp  windows_udp_transport.cpp
src/: data_collector.py  data_generator.py  get_data.py  main.py  predictor.py  use_model.py
